data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2172.wast
;; 3. **Test Description**:    Implement deeply nested loops within blocks where inner loops regulate control flow using `br` instructions targeting the outermost blocks. The purpose is to test if the context is adequately managed for deep nesting and correct unwinding of the operand stack back to the initial block state after the `br`.

(assert_invalid
  (module (func $deep-nesting-stack-balancing
    (block (result i32)
      (block (result i32)
        (block (result i32)
          (block (result i32)
            (br 3 (i32.const 42))
            (i32.const 1) ;; Incorrect stack state continuation
          )
        )
      )
    )
  ))
  "type mismatch"
)